--- a/docs/team/gohsnn.adoc
+++ b/docs/team/gohsnn.adoc
@@ -42,6 +42,8 @@ in the result box.
 .The graphical user interface for Jarvis under the Finance Tracker tab
 image::finance-tracker/financetracker-ui.png[]
 
+{sp} +
+
 In addition to developing both the front-end and back-end of the Finance
 Tracker feature, I also contributed to adopting the original version of the
 developer's guide as well as most of the diagrams in the final developer guide.
@@ -55,8 +57,6 @@ This sub-section will denote the important symbols and formatting used in this
 document.
 
 NOTE: This denotes additional information that is helpful for elaboration.
-
-{sp} +
 
 `FinanceTracker` refers to the Java class named FinanceTracker.
 
@@ -99,7 +99,6 @@ Please click on these links to see a sample of my code for this project:
 
 1. https://drive.google.com/open?id=1IGHKCYYw612gu4e2cUfr0B2Gcmdy-3-8[Functional Code]
 2. https://drive.google.com/open?id=1JwHdtob_-5TGDpFWXw8Fq2--81RLfbQc[Test Code]
-//todo fill the google folders with files
 
 ==== Documentation
 
@@ -113,8 +112,9 @@ guide were done by me. They will be elaborated in the later sections, namely
 ==== Enhancements to existing features
 
 Due to extensive testing on the Finance Tracker feature, I was able to
-contribute to increasing the overall test coverage from.
-//todo find pr with increase in test coverage
+contribute to increasing the overall test coverage from 71.46% to 75.54%. This
+can be viewed from pull request
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/137[#137].
 
 In addition, I also made a revision to the overall user interface of the
 application to change the order of the feature tabs. This was to increase
@@ -145,7 +145,7 @@ following examples in this https://github.com/gohsnn/ped/issues[link].
 
 This section will summarise my contribution to the overall set of documentation
 for the team project, excluding the Finance Tracker feature, which would be
-= elaborated from <<gohsnn.adoc#contributions-to-user-guide,this section>>.
+elaborated from <<gohsnn.adoc#contributions-to-user-guide,this section>>.
 
 ===== User Guide
 
@@ -225,6 +225,7 @@ image::finance-tracker/find-paid1.png[]
 image::finance-tracker/find-paid2.png[]
 
 {sp} +
+
 Format: `find-paid KEYWORD`
 
 ==== Example
@@ -296,6 +297,8 @@ Shown below is the class diagram for the Finance Tracker.
 .Finance Tracker Class Diagram
 image::finance-tracker/ModelFinanceTrackerClassDiagram.png[]
 
+{sp} +
+
 For more elaboration on the components of the Finance Tracker feature, please
 click to view our
 https://github.com/AY1920S1-CS2103T-T10-1/main/blob/master/docs/DeveloperGuide.adoc#finance-tracker-feature[developer guide].
@@ -321,6 +324,8 @@ than or equal to zero, or greater than the largest index in `InstallmentList`.
 .Activity Diagram for edit-install command
 image::finance-tracker/EditInstallmentActivityDiagram.png[]
 
+{sp} +
+
 === Execution of command `edit-install`
 
 The following sequence diagram illustrates how an
@@ -333,6 +338,8 @@ with the corresponding fields.
 
 .Sequence Diagram for edit-install command
 image::finance-tracker/EditInstallmentSequenceDiagram.png[]
+
+{sp} +
 
 === Design Considerations
 
